fix: ajustes finales en docker, db y pruebas de backend
